fix(empty message) margins too narrow

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -341,7 +341,7 @@ p {
 span.empty-message {
   font-size: $base_size;
   font-weight: 300;
-  margin: 15px 5px
+  margin: 15px 10px
 }
 
 /* --- BACK --- */
